mobile-without-menu-and-imgs

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=0.1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Студія</title>
     <link
       rel="stylesheet"
@@ -27,37 +27,39 @@
         <a href="./index.html" lang="en" class="logo header__logo link"
           >Web<span class="logo--end-black">Studio</span></a
         >
-        <nav class="header__navigation navigation">
-          <ul class="navigation__list">
+        <div class="navigation-wrap">
+          <nav class="header__navigation navigation">
+            <ul class="navigation__list">
+              <li>
+                <a
+                  class="navigation__list-link link navigation__list-link--current"
+                  href="./index.html"
+                  >Студія</a
+                >
+              </li>
+              <li><a class="navigation__list-link link" href="./portfolio.html">Портфоліо</a></li>
+              <li><a class="navigation__list-link link" href="#">Контакти</a></li>
+            </ul>
+          </nav>
+          <ul class="navigation__contacts">
             <li>
-              <a
-                class="navigation__list-link link navigation__list-link--current"
-                href="./index.html"
-                >Студія</a
+              <a class="navigation__contacts-link link" href="mailto:info@devstudio.com">
+                <svg class="navigation__contacts-icon" width="16" height="12">
+                  <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                </svg>
+                info@devstudio.com</a
               >
             </li>
-            <li><a class="navigation__list-link link" href="./portfolio.html">Портфоліо</a></li>
-            <li><a class="navigation__list-link link" href="#">Контакти</a></li>
+            <li>
+              <a class="navigation__contacts-link link" href="tel:+380961111111">
+                <svg class="navigation__contacts-icon" width="10" height="16">
+                  <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                </svg>
+                +38 096 111 11 11</a
+              >
+            </li>
           </ul>
-        </nav>
-        <ul class="navigation__contacts">
-          <li>
-            <a class="navigation__contacts-link link" href="mailto:info@devstudio.com">
-              <svg class="navigation__contacts-icon" width="16" height="12">
-                <use href="./images/symbol-defs.svg#icon-envelope"></use>
-              </svg>
-              info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="navigation__contacts-link link" href="tel:+380961111111">
-              <svg class="navigation__contacts-icon" width="10" height="16">
-                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
-              </svg>
-              +38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+        </div>
       </div>
     </header>
 
@@ -601,7 +603,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button data-modal-close type="button" class="modal__close-btn close-btn">
           <svg class="close-btn__icon" width="30" height="30">
@@ -685,7 +687,7 @@
           <button type="submit" class="modal-form__btn button">Відправити</button>
         </form>
       </div>
-    </div>
+    </div> -->
 
     <script src="./js/modal.js"></script>
   </body>
