--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
         <a href="./index.html" lang="en" class="logo header__logo link"
           >Web<span class="logo--end-black">Studio</span></a
         >
-        <div class="navigation-wrap">
-          <nav class="header__navigation navigation">
+        <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+          <svg width="24px" height="16px">
+            <use href="./images/symbol-defs.svg#icon-menu-burger"></use>
+          </svg>
+        </button>
+        <div class="menu header__menu">
+          <nav class="menu__navigation navigation">
             <ul class="navigation__list">
               <li>
                 <a
@@ -41,24 +46,95 @@
               <li><a class="navigation__list-link link" href="#">Контакти</a></li>
             </ul>
           </nav>
-          <ul class="navigation__contacts">
+          <ul class="menu__contacts">
             <li>
-              <a class="navigation__contacts-link link" href="mailto:info@devstudio.com">
-                <svg class="navigation__contacts-icon" width="16" height="12">
+              <a class="menu__contacts-link link" href="mailto:info@devstudio.com">
+                <svg class="menu__contacts-icon" width="16" height="12">
                   <use href="./images/symbol-defs.svg#icon-envelope"></use>
                 </svg>
                 info@devstudio.com</a
               >
             </li>
             <li>
-              <a class="navigation__contacts-link link" href="tel:+380961111111">
-                <svg class="navigation__contacts-icon" width="10" height="16">
+              <a class="menu__contacts-link link" href="tel:+380961111111">
+                <svg class="menu__contacts-icon" width="10" height="16">
                   <use href="./images/symbol-defs.svg#icon-smartphone"></use>
                 </svg>
                 +38 096 111 11 11</a
               >
             </li>
           </ul>
+        </div>
+
+        <div class="mobile-menu">
+          <button class="menu-toggle js-close-menu">
+            <svg width="18px" height="18px">
+              <use href="./images/symbol-defs.svg#close-icon"></use>
+            </svg>
+          </button>
+          <div class="mobile-menu-container">
+            <nav class="mobile-menu__navigation mobile-navigation">
+              <ul class="mobile-navigation__list">
+                <li>
+                  <a class="mobile-navigation__list-link link" href="./index.html">Студія</a>
+                </li>
+                <li>
+                  <a class="mobile-navigation__list-link link" href="./portfolio.html">Портфоліо</a>
+                </li>
+                <li><a class="mobile-navigation__list-link link" href="#">Контакти</a></li>
+              </ul>
+            </nav>
+            <ul class="mobile-menu__contacts">
+              <li>
+                <a class="mobile-menu__contacts-link link" href="tel:+380961111111">
+                  +38 096 111 11 11</a
+                >
+              </li>
+              <li>
+                <a class="mobile-menu__contacts-link link" href="mailto:info@devstudio.com">
+                  info@devstudio.com</a
+                >
+              </li>
+            </ul>
+            <ul class="mobile-menu__socials">
+              <li class="mobile-menu__socials-item">
+                <a
+                  class="mobile-menu__socials-link link"
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Instagram
+                </a>
+              </li>
+              <li class="mobile-menu__socials-item">
+                <a
+                  class="mobile-menu__socials-link link"
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Twitter
+                </a>
+              </li>
+              <li class="mobile-menu__socials-item">
+                <a
+                  class="mobile-menu__socials-link link"
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Facebook
+                </a>
+              </li>
+              <li class="mobile-menu__socials-item">
+                <a
+                  class="mobile-menu__socials-link link"
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >LinkedIn
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </header>
@@ -690,5 +766,12 @@
     </div> -->
 
     <script src="./js/modal.js"></script>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/mobile-menu.js"></script>
   </body>
 </html>
