--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           aria-expanded="false"
           aria-controls="mobile-menu"
         >
-          <svg width="24px" height="16px">
+          <svg class="menu-toggle__icon" width="24px" height="16px">
             <use href="./images/symbol-defs.svg#icon-menu-burger"></use>
           </svg>
         </button>
@@ -73,7 +73,7 @@
 
       <div class="mobile-menu-container js-menu-container" id="mobile-menu">
         <button class="menu-toggle js-close-menu button">
-          <svg width="18px" height="18px">
+          <svg class="menu-toggle__icon" width="18px" height="18px">
             <use href="./images/symbol-defs.svg#icon-menu-close"></use>
           </svg>
         </button>
