--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <ul class="menu__contacts">
             <li>
               <a class="menu__contacts-link link" href="mailto:info@devstudio.com">
-                <svg class="menu__contacts-icon" width="16" height="12">
+                <svg class="menu__contacts-icon menu__contacts-icon--letter">
                   <use href="./images/symbol-defs.svg#icon-envelope"></use>
                 </svg>
                 info@devstudio.com</a
@@ -61,7 +61,7 @@
             </li>
             <li>
               <a class="menu__contacts-link link" href="tel:+380961111111">
-                <svg class="menu__contacts-icon" width="10" height="16">
+                <svg class="menu__contacts-icon menu__contacts-icon--phone">
                   <use href="./images/symbol-defs.svg#icon-smartphone"></use>
                 </svg>
                 +38 096 111 11 11</a
