--- a/index.html
+++ b/index.html
@@ -586,84 +586,86 @@
 
     <footer class="footer">
       <div class="container footer__container">
-        <div class="footer__contacts">
-          <a href="./index.html" lang="en" class="logo footer__logo link"
-            >Web<span class="logo--end-white">Studio</span></a
-          >
-          <address class="footer__address add">
-            <ul class="add__list">
-              <li class="add__list-item">
+        <div class="footer-contacts-join-wrap">
+          <div class="footer__contacts">
+            <a href="./index.html" lang="en" class="logo footer__logo link"
+              >Web<span class="logo--end-white">Studio</span></a
+            >
+            <address class="footer__address add">
+              <ul class="add__list">
+                <li class="add__list-item">
+                  <a
+                    class="add__list-map link"
+                    href="https://goo.gl/maps/znrV5zkPQKS67RJL6"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >м. Київ, пр-т Лесі Українки, 26</a
+                  >
+                </li>
+                <li class="add__list-item">
+                  <a class="add__list-link link" href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li class="add__list-item">
+                  <a class="add__list-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="footer__join join">
+            <b class="join__title">приєднуйтесь</b>
+            <ul class="join__socials socials">
+              <li class="socials__item">
                 <a
-                  class="add__list-map link"
-                  href="https://goo.gl/maps/znrV5zkPQKS67RJL6"
+                  class="socials__item-link link socials__item-link--bg-gray-col-white"
+                  href="#"
                   target="_blank"
-                  rel="noopener noreferrer"
-                  >м. Київ, пр-т Лесі Українки, 26</a
+                  rel="noopener noreferrer nofollow"
                 >
+                  <svg class="socials__item-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="add__list-item">
-                <a class="add__list-link link" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
+              <li class="socials__item">
+                <a
+                  class="socials__item-link link socials__item-link--bg-gray-col-white"
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
                 >
+                  <svg class="socials__item-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="add__list-item">
-                <a class="add__list-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+              <li class="socials__item">
+                <a
+                  class="socials__item-link link socials__item-link--bg-gray-col-white"
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg class="socials__item-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials__item">
+                <a
+                  class="socials__item-link link socials__item-link--bg-gray-col-white"
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg class="socials__item-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
-        </div>
-        <div class="footer__join join">
-          <b class="join__title">приєднуйтесь</b>
-          <ul class="join__socials socials">
-            <li class="socials__item">
-              <a
-                class="socials__item-link link socials__item-link--bg-gray-col-white"
-                href="#"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                <svg class="socials__item-icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials__item">
-              <a
-                class="socials__item-link link socials__item-link--bg-gray-col-white"
-                href="#"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                <svg class="socials__item-icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials__item">
-              <a
-                class="socials__item-link link socials__item-link--bg-gray-col-white"
-                href="#"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                <svg class="socials__item-icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials__item">
-              <a
-                class="socials__item-link link socials__item-link--bg-gray-col-white"
-                href="#"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                <svg class="socials__item-icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          </div>
         </div>
         <div class="footer__subscription subscription">
           <b class="subscription__title">Підпишіться на розсилку</b>
