--- a/index.html
+++ b/index.html
@@ -248,6 +248,9 @@
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list">
             <li class="team__list-item team-member">
+              <picture>
+                <source srcset="" />
+              </picture>
               <img
                 class="team-member__img"
                 src="./images/ihor-demyanenko.jpg"
