team-adaptive-img-is-done

--- a/index.html
+++ b/index.html
@@ -249,15 +249,25 @@
           <ul class="team__list">
             <li class="team__list-item team-member">
               <picture>
-                <source srcset="" />
-              </picture>
-              <img
-                class="team-member__img"
-                src="./images/ihor-demyanenko.jpg"
-                width="270"
-                height="260"
-                alt="Дизайнер Ігор - молодий брюнет в окуляра та з бородою"
-              />
+                <source
+                  srcset="./images/team/igor-desk.jpg 1x, ./images/team/igor-desk-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./images/team/igor-tab.jpg 1x, ./images/team/igor-tab-2x.jpg 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./images/team/igor-mob.jpg 1x, ./images/team/igor-mob-2x.jpg 2x"
+                  media="(max-width: 767px)"
+                />
+                <img
+                  class="team-member__img"
+                  src="./images/team/igor-mob-2x.jpg"
+                  width="450"
+                  height="460"
+                  alt="Дизайнер Ігор - молодий брюнет в окуляра та з бородою"
+                />
               <div class="team-member__content">
                 <h3 class="team-member__title">Ігор Дем'яненко</h3>
                 <p class="team-member__text" lang="en">Product Designer</p>
@@ -314,13 +324,27 @@
               </div>
             </li>
             <li class="team__list-item team-member">
-              <img
-                class="team-member__img"
-                src="./images/olga-repina.jpg"
-                width="270"
-                height="260"
-                alt="Розробник інтерфейсу Ольга - блондинка, одягнена в діловий стиль"
-              />
+              <picture>
+                <source
+                  srcset="./images/team/olga-desk.jpg 1x, ./images/team/olga-desk-2x.jpg 2x"
+                  media="(min-width:1200px)"
+                />
+                <source
+                  srcset="./images/team/olga-tab.jpg 1x, ./images/team/olga-tab-2x.jpg 2x"
+                  media="(min-width:768px)"
+                />
+                <source
+                  srcset="./images/team/olga-mob.jpg 1x, ./images/team/olga-mob-2x.jpg 2x"
+                  media="(max-width:767px)"
+                />
+                <img
+                  class="team-member__img"
+                  src="./images/team/olga-mob-2x.jpg"
+                  width="450"
+                  height="460"
+                  alt="Розробник інтерфейсу Ольга - блондинка, одягнена в діловий стиль"
+                />
+              </picture>
               <div class="team-member__content">
                 <h3 class="team-member__title">Ольга Рєпіна</h3>
                 <p class="team-member__text" lang="en">Frontend Developer</p>
@@ -377,13 +401,27 @@
               </div>
             </li>
             <li class="team__list-item team-member">
-              <img
-                class="team-member__img"
-                src="./images/mykola-tarasov.jpg"
-                width="270"
-                height="260"
-                alt="Маркетолог Микола - життєрадісний молодий чоловік"
-              />
+              <picture>
+                <source
+                  srcset="./images/team/mykola-desk.jpg 1x, ./images/team/mykola-desk-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./images/team/mykola-tab.jpg 1x, ./images/team/mykola-tab-2x.jpg 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./images/team/mykola-mob.jpg 1x, ./images/team/mykola-mob-2x.jpg 2x"
+                  media="(max-width: 767px)"
+                />
+                <img
+                  class="team-member__img"
+                  src="./images/team/mykola-mob-2x.jpg"
+                  width="450"
+                  height="460"
+                  alt="Маркетолог Микола - життєрадісний молодий чоловік"
+                />
+              </picture>
               <div class="team-member__content">
                 <h3 class="team-member__title">Микола Тарасов</h3>
                 <p class="team-member__text" lang="en">Marketing</p>
@@ -440,13 +478,27 @@
               </div>
             </li>
             <li class="team__list-item team-member">
-              <img
-                class="team-member__img"
-                src="./images/mykhailo-yermakov.jpg"
-                width="270"
-                height="260"
-                alt="Дизайнер інтерфейсу Михайло - брюнет, одягений в стриманий стиль"
-              />
+              <picture>
+                <source
+                  srcset="./images/team/mykhailo-desk.jpg 1x, ./images/team/mykhailo-desk-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./images/team/mykhailo-tab.jpg 1x, ./images/team/mykhailo-tab-2x.jpg 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./images/team/mykhailo-mob.jpg 1x, ./images/team/mykhailo-mob-2x.jpg 2x"
+                  media="(max-width: 767px)"
+                />
+                <img
+                  class="team-member__img"
+                  src="./images/team/mykhailo-mob-2x.jpg"
+                  width="450"
+                  height="460"
+                  alt="Дизайнер інтерфейсу Михайло - брюнет, одягений в стриманий стиль"
+                />
+              </picture>
               <div class="team-member__content">
                 <h3 class="team-member__title">Михайло Єрмаков</h3>
                 <p class="team-member__text" lang="en">UI Designer</p>
