examples-img-is-done

--- a/index.html
+++ b/index.html
@@ -211,8 +211,9 @@
           <ul class="examples__list">
             <li class="examples__item">
               <img
+                srcset="./images/examples/computer-desk.jpg 1x, ./images/examples/computer-desk-2x.jpg 2x"
                 class="examples__item-img"
-                src="./images/what-do-we-do1.jpg"
+                src="./images/examples/computer-desk.jpg"
                 width="370"
                 height="294"
                 alt="Приклад робочого процесу №1"
@@ -221,8 +222,9 @@
             </li>
             <li class="examples__item">
               <img
+                srcset="./images/examples/smartphone-desk.jpg 1x, ./images/examples/smartphone-desk-2x.jpg 2x"
                 class="examples__item-img"
-                src="./images/what-do-we-do2.jpg"
+                src="./images/examples/smartphone-desk.jpg"
                 width="370"
                 height="294"
                 alt="Приклад робочого процесу №2"
@@ -231,8 +233,9 @@
             </li>
             <li class="examples__item">
               <img
+                srcset="./images/examples/tablet-desk.jpg 1x, ./images/examples/tablet-desk-2x.jpg 2x"
                 class="examples__item-img"
-                src="./images/what-do-we-do3.jpg"
+                src="./images/examples/tablet-desk.jpg"
                 width="370"
                 height="294"
                 alt="Приклад робочого процесу №3"
