--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
         </div>
       </div>
     </footer>
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button data-modal-close type="button" class="modal__close-btn close-btn">
           <svg class="close-btn__icon" width="30" height="30">
@@ -829,7 +829,7 @@
           <button type="submit" class="modal-form__btn button">Відправити</button>
         </form>
       </div>
-    </div> -->
+    </div>
 
     <script src="./js/modal.js"></script>
     <script
