fix-close-tag-picture

--- a/index.html
+++ b/index.html
@@ -211,7 +211,10 @@
           <ul class="examples__list">
             <li class="examples__item">
               <img
-                srcset="./images/examples/computer-desk.jpg 1x, ./images/examples/computer-desk-2x.jpg 2x"
+                srcset="
+                  ./images/examples/computer-desk.jpg    1x,
+                  ./images/examples/computer-desk-2x.jpg 2x
+                "
                 class="examples__item-img"
                 src="./images/examples/computer-desk.jpg"
                 width="370"
@@ -222,7 +225,10 @@
             </li>
             <li class="examples__item">
               <img
-                srcset="./images/examples/smartphone-desk.jpg 1x, ./images/examples/smartphone-desk-2x.jpg 2x"
+                srcset="
+                  ./images/examples/smartphone-desk.jpg    1x,
+                  ./images/examples/smartphone-desk-2x.jpg 2x
+                "
                 class="examples__item-img"
                 src="./images/examples/smartphone-desk.jpg"
                 width="370"
@@ -233,7 +239,10 @@
             </li>
             <li class="examples__item">
               <img
-                srcset="./images/examples/tablet-desk.jpg 1x, ./images/examples/tablet-desk-2x.jpg 2x"
+                srcset="
+                  ./images/examples/tablet-desk.jpg    1x,
+                  ./images/examples/tablet-desk-2x.jpg 2x
+                "
                 class="examples__item-img"
                 src="./images/examples/tablet-desk.jpg"
                 width="370"
@@ -271,6 +280,7 @@
                   height="460"
                   alt="Дизайнер Ігор - молодий брюнет в окуляра та з бородою"
                 />
+              </picture>
               <div class="team-member__content">
                 <h3 class="team-member__title">Ігор Дем'яненко</h3>
                 <p class="team-member__text" lang="en">Product Designer</p>
